# blurdeform

./: .gitignore  CMakeLists.txt  README.md  blurPostDeformCmd.cpp  blurPostDeformCmd.h  blurPostDeformNode.cpp  blurPostDeformNode.h  blurPostDeformPlugin.cpp  blurdeform.mod  buildmodfile.py  common.cpp  common.h  mayaConfigure.bat  meson.build  quick_compile.bat  setOverloads.h
.github/workflows/: main.yml
include/: common.h
scripts/blurdeform/: __init__.py  __meta__.xml  blurAddPose.py  blurDeformQueryMeshes.py  blurdeform.py  extraWidgets.py  filepickerwidget.py  main.pyw  storeXml.py  utils.py
scripts/blurdeform/ui/: blurAddPose.ui  blurDeformDialog.ui  blurDeformQueryMeshes.ui  blurdeform.ui  storeXml.ui
src/: blurPostDeformCmd.cpp  blurPostDeformCmd.h  blurPostDeformNode.cpp  blurPostDeformNode.h  blurPostDeformPlugin.cpp  common.cpp  common.h
